<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/drawer_layout"
    android:background="#00fff7"
    tools:context=".Atencion_Cliente">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:text="@string/bienvenido_al_m_dulo_de_atenci_n_a_clientes"
            android:gravity="center_horizontal" />

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_marginStart="150dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/atencioncte"
            android:layout_marginLeft="100dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"
                android:text="@string/para_nosotros_es_muy_importante_estar_en_contacto_contigo_as_que_ponemos_a_tu_disposici_n_nuestro_whatsapp_para_cualquier_duda_sobre_tu_pedido"
                android:gravity="center_horizontal" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/sobre"/>
            <EditText
                android:id="@+id/tv_msj"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/estamos_cerca_de_t_escribenos_aqu"
                android:textSize="20sp"
                android:textAlignment="center"
                android:gravity="center_horizontal" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_envio"
                android:onClick="ClickMsj"
                android:text="@string/enviar"
                android:textSize="20sp"
                android:textStyle="bold"
                android:drawableRight="@drawable/whats"
                android:layout_marginTop="10dp"
                android:layout_marginStart="90dp"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginLeft="90dp" />
        </LinearLayout>

    </LinearLayout>



    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/color_white">
        <include
            layout="@layout/main_nav_drawer"/>
    </RelativeLayout>




</androidx.drawerlayout.widget.DrawerLayout>